[metadata]
name = sus_libery 
version = 0.0.1
author = Monojit_Layek
author_email = mlayek@icloud.com
description = Built of a simple and efficient Machine Learning library for predictive data analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mlayek21/SUS-Libery.git
project_urls =
    Bug Tracker = https://github.com/mlayek21/SUS-Libery
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src